# predictable-workflow-failures

./: .gitignore  LICENSE  README.md  pyproject.toml
src/workflow_generator/: __init__.py  cli.py  converter.py  metadata.py
src/workflow_generator/scenarios/: __init__.py  bad_exit_code.py  base.py  dependency_failure.py  memory_exceeded.py  missing_input.py  success.py  timeout.py  transfer_failure.py
tests/: test_converter.py  test_scenarios.py
