[project]
name = "workflow-generator"
version = "0.1.0"
description = "Generate Pegasus WMS workflows with predictable failure modes for ML training"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "PegasusAI" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "nbformat>=5.0",
]

[project.urls]
Homepage = "https://github.com/pegasusai/predictable-workflow-failures"
Repository = "https://github.com/pegasusai/predictable-workflow-failures"
Issues = "https://github.com/pegasusai/predictable-workflow-failures/issues"

[project.scripts]
workflow-generator = "workflow_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_generator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
